@@ -42,7 +42,7 @@ ext {
     bucket4jVersion = "8.19.0"
     archunitVersion = "1.5.0"
     batikVersion = "1.19"
-    jpdfiumVersion = "1.1.3"
+    jpdfiumVersion = "1.1.4"
     jwtVersion = "0.13.0"
     awsSdkVersion = "2.51.3"
     jschVersion = "2.28.6"
@@ -203,6 +203,7 @@ subprojects {
     }
 
     repositories {
+        mavenLocal()
         if (!rootProject.ext.mavenUrl.isEmpty()) {
             maven {
                 url = rootProject.ext.mavenUrl + '/releases'
@@ -744,6 +745,7 @@ tasks.register('buildRestartHelper', Jar) {
 }
 
 tasks.withType(Test).configureEach {
+    jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
     // maxParallelForks: parallelise JUnit across cores
     // Half of available CPUs is a safe default; bump if your tests are I/O-bound.
     maxParallelForks = Math.max(1, (Runtime.runtime.availableProcessors().intdiv(2)) as int)
